src/components/App.css
/* Reset CSS Styles */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Variable Styling */
:root {
	/* Colours */
	--bg1: rgba(18, 18, 18, 1);
	--bg2: rgba(30.75, 30.75, 30.75, 1);
	--bg3: rgba(43.5, 43.5, 43.5, 1);
	--bg4: rgba(56.25, 56.25, 56.25, 1);
	--bg5: rgba(69, 69, 69, 1);
	--primary1: rgba(245, 245, 245, 1);
	--primary2: rgba(230, 230, 230, 1);
	--primary3: rgba(210, 210, 210, 1);
	--primary4: rgba(160, 160, 160, 1);
	--primary5: rgba(130, 130, 130, 1);
	--secondary1: rgba(145, 25, 141, 1);
	--secondary2: rgba(162, 57, 160, 1);
	--secondary3: rgba(192, 84, 190, 1);
	--secondary4: rgba(194, 112, 192, 1);
	--secondary5: rgba(214, 169, 213, 1);
	--lightOverlay1: rgba(255, 255, 255, 0.05);
	--lightOverlay2: rgba(255, 255, 255, 0.10);
	--lightOverlay3: rgba(255, 255, 255, 0.15);
	--darkOverlay1: rgba(0, 0, 0, 0.05);
	--darkOverlay2: rgba(0, 0, 0, 0.10);
	--darkOverlay3: rgba(0, 0, 0, 0.15);
	--red: red;
	--green: green;


	/* Font Sizes */
	--fs-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
	--fs-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
	--fs-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
	--fs-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
	--fs-xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
	--fs-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
	--fs-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
}



/* General Styling */
* {
  box-sizing: border-box;
	color: var(--primary5);
}

body {
	background-color: var(--bg1);
}

/* Header Container Styling */
#header-container {
}

/* Searchbar Container */
#searchbar-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 5vh;
}

.searchbar-form {

}

.searchbar-form input {
  width: 20rem;
	padding: 0.25rem;
	border: none;
	border-radius: 0.5rem;
	outline: none;
	background-color: var(--bg3);
}

.dropdown-container {
  position: absolute;
  border: 1px solid black;
  width: 20rem;
  max-height: 10rem;
  background-color: white;
	line-height: normal;
  overflow: auto;
}

.dropdown-item {
	padding: 0.25rem;
	cursor: pointer;
}

/* Expirybar Styling */
#expirybar-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100vw;
}

.expirybar {
	display: flex;
	flex-direction: row;
	justify-content: center;
	flex-wrap: wrap;
  width: 90%;
	max-width: 90vw;
	border-radius: 0.5rem;
	background-color: var(--bg2);

}

.expiry {
	padding: 0.25rem 0.5rem;
	cursor: pointer;
}

/* Expirybar Styling */
#overview-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
}

.overview {
  display: grid;
	grid-template-columns: repeat(3, 1fr);
  width: 90vw;
	height: 2rem;
	padding-top: 0.5rem;
	padding-bottom: 1rem;
}

.overview-dte {
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
}

.overview-ticker,
.overview-calls,
.overview-puts {
	display: flex;
	flex-direction: row;
	justify-content: center;
}

.overview-iv {
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
}

.overview span {
	color: var(--primary1);
	font-size: 1rem;
}

/* All Chain Styling */
/* Chain ContainerStyling */
#chain-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
  width: 100vw;
  height: 75vh;
	min-width: 20rem;
}

.chain {
	position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 90vw;
}

.chain-header {
	position: absolute;
	top: -1.5rem;
	display: grid;
	grid-template-columns: 1fr 6.5vw 1fr;
	justify-items: center;
	width: 92.5vw;
	height: 2rem;
}

.chain-header div {
	width: 6.5vw;
}

.chain-header span {
	color: var(--primary1);
	font-size: 1rem;
}

.low-chain,
.high-chain {
	display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 90vw;
}

.low-chain #call-container,
.low-chain #put-container,
.high-chain #call-container,
.high-chain #put-container {
	border-bottom: 0.5px solid var(--primary5);
}

.low-chain :last-child > #call-container,
.low-chain :last-child > #put-container,
.high-chain :last-child > #call-container,
.high-chain :last-child > #put-container {
	border-bottom: none;
}

/* Option Strike Styling */
#strike-container {
  display: grid;
  grid-template-columns: 10fr 2fr 10fr;
  width: 90vw;
	height: 1.5rem;
}

#strike {
	display: grid;
  place-items: center;
}

#strike span {
	color: var(--primary5);
}

/* Put & Call Price Styling */
#call-container,
#put-container {
	position: relative;
	display: grid;
  grid-template-columns: repeat(4, 1fr);
  place-items: center;
	cursor: pointer;
}

#call-container.empty-option-container,
#put-container.empty-option-container {
	cursor: default;
}

#call-container span,
#put-container span {
	color: var(--primary1);
}

#call-container .empty-option-popup,
#put-container .empty-option-popup {
	display: none;
	position: absolute;
	width: 100%;
	height: 100%;
	padding: 0.25rem;
	background-color: var(--secondary4);
	overflow: hidden;
	white-space: nowrap;
}

#call-container:hover > .empty-option-popup,
#put-container:hover > .empty-option-popup {
	display: flex;
	justify-content: center;
	align-items: center;
}

/* Band Styling */
#band-outer-container {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 92.5vw;
	height: 2rem;
	margin: 0.1rem;
	border-radius: 0.3rem;
	background-color: var(--bg4);
	color: black;
	z-index: 10;
}

#band-inner-container {
  display: grid;
  grid-template-columns: 10fr 2fr 10fr;
  width: 90vw;
}

#band-outer-container span {
	color: var(--primary1);
}

.band-call,
.band-put {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  place-items: center;
}

.band-price {
  display: grid;
  place-items: center;
}

/* Strikes Border Styling */
#strikes-border {
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
	width: 6.5vw;
	height: calc(100% + 0.5rem);
	border-radius: 0.5rem;
	background-color: var(--lightOverlay1);
}

/* Popup Styling */
#popup-container {
	position: fixed;
	top: 0;
	left: 0;
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	width: 100vw;
	height: 100vh;
	background-color: var(--lightOverlay3);
	z-index: 100;
}

.popup {
	position: relative;
	width: 50vw;
	padding: 1rem;
	padding-top: 0.5rem;
	border-radius: 0.5rem;
	background-color: var(--bg1);
}

.popup header {
	display: flex;
	flex-direction: row;
	justify-content: center;
	width: 100%;
	margin-bottom: 0.5rem;
	color: var(--primary1);
}

.popup header span {
	font-size: 1.25rem;
	color: var(--primary1);
}

.popup-prices-header,
.popup-greeks-header,
.popup-chart-header {
	margin-top: 0.5rem;
}

.popup .popup-prices-header span,
.popup .popup-greeks-header span,
.popup .popup-chart-header span {
	font-size: 1rem;
	color: var(--primary5);
}

.popup .close-popup-button {
	position: absolute;
	top: 0.5rem;
	right: 0.5rem;
	width: 1rem;
	height: 1rem;
	fill: var(--primary1);
	cursor: pointer;
}

.popup-prices {
	display: grid;
	grid-template-columns: 1fr 1fr;
}

#popup-container .popup-prices > :nth-child(2n){
	padding-left: 1rem;
	border-left: 0.5px solid grey;
}

#popup-container .popup-prices > :nth-child(1n){
	padding-right: 1rem;
}

.popup-greeks {
	display: grid;
	grid-template-columns: 1fr 1fr;
}

#popup-container .popup-greeks > :nth-child(2n){
	padding-left: 1rem;
	border-left: 0.5px solid grey;
}

#popup-container .popup-greeks > :nth-child(1n){
	padding-right: 1rem;
}

.popup-chart {
	width: 100%;
}

.popup-chart-loading {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	width: 100%;
	height: 12.5rem;
}

/* Detail Styling */
#detail {
	display: grid;
	grid-template-columns: 2fr 1fr;
	padding: 0.25rem;
}

#detail span {
	color: var(--primary1);
}

.detail-name {
}

.detail-value {
	justify-self: end;
}

